<resources>
    <string name="app_name">ghennadiiganenko-quiz-project</string>
    <string name="play_button">Play</string>
    <string name="exit_button">Exit</string>
    <string name="question">Question_n</string>
    <string name="right_answer">Right Answer</string>
    <string name="wrong_answer">Wrong Answer</string>
    <string name="right_popup">Right</string>
    <string name="lost_or_win_image">Lost or win image</string>
    <string name="answers_count">Right answers: %1$d from %2$d</string>
    <string name="play_again">Play again</string>
    <string name="main_menu">Main Menu</string>
    <string name="internet_exception">The application requires access to the network.\nPlease, enable and restart.</string>
</resources>