<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.FinalActivity">

        <ImageView
            android:id="@+id/won_or_lost_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="510dp"
            android:layout_marginHorizontal="90dp"
            android:src="@drawable/win"
            android:contentDescription="@string/lost_or_win_image" />

        <TextView
            android:id="@+id/numberOfCorrectAnswersText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/won_or_lost_image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.1"
            android:textSize="18sp"
            android:text="@string/answers_count" />

        <Button
            android:id="@+id/playAgainButton"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.7"
            app:layout_constraintHorizontal_bias="0.1"
            android:textSize="18sp"
            android:text="@string/play_again" />

        <Button
            android:id="@+id/mainMenuButton"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.7"
            app:layout_constraintHorizontal_bias="0.9"
            android:textSize="18sp"
            android:text="@string/main_menu" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>