<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.GameActivity">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="20dp"
            app:cardCornerRadius="30dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.1"
            android:backgroundTint="@color/teal_200">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:layout_marginVertical="5dp">

                <TextView
                    android:id="@+id/questionsText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:text="@string/question" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <RadioGroup
            android:id="@+id/answerButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="40dp"
            app:layout_constraintVertical_bias="0.8"
            android:gravity="center" >
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/radio_selector"
                android:button="@android:color/transparent"
                android:textColor="@color/black"
                android:gravity="center"
                android:textSize="15sp"
                android:layout_marginTop="5dp"
                android:text="@string/right_answer" />
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/radio_selector"
                android:button="@android:color/transparent"
                android:textColor="@color/black"
                android:gravity="center"
                android:textSize="15sp"
                android:layout_marginTop="5dp"
                android:text="@string/wrong_answer" />
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/radio_selector"
                android:button="@android:color/transparent"
                android:textColor="@color/black"
                android:gravity="center"
                android:textSize="15sp"
                android:layout_marginTop="5dp"
                android:text="@string/wrong_answer" />
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/radio_selector"
                android:button="@android:color/transparent"
                android:textColor="@color/black"
                android:gravity="center"
                android:textSize="15sp"
                android:layout_marginTop="5dp"
                android:text="@string/wrong_answer" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/questionsText"
            app:layout_constraintBottom_toTopOf="@id/answerButtons"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.7"
            android:text="@string/right_popup"
            android:visibility="gone" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>